--- a/.github/workflows/homebrew.yaml
+++ b/.github/workflows/homebrew.yaml
@@ -3,24 +3,23 @@
 name: Homebrew Formula
 
 on:
-  push:
   release:
     types: [released]
 
 jobs:
   homebrew:
     name: Update Homebrew formula
-    if: ${{ github.event_name != 'push' || !contains(github.ref, '-') }}
+    if: ${{ !contains(github.ref, '-') }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
     steps:
       - name: Required info
         id: info
+        env:
+          TAG: ${{ github.ref_name }}
         run: |
-          TAG="${GITHUB_REF#refs/tags/}"
           DOWNLOAD_URL="https://github.com/andreswebs/mcbox/releases/download/${TAG}/mcbox-${TAG}.tar.gz"
-          echo "tag=${TAG}" >> "${GITHUB_OUTPUT}"
           echo "download-url=${DOWNLOAD_URL}" >> "${GITHUB_OUTPUT}"
 
       - name: Update formula
