--- a/cliff.toml
+++ b/cliff.toml
@@ -67,6 +67,7 @@ commit_parsers = [
     { message = "^chore\\(release\\): prepare for", skip = true },
     { message = "^chore|^ci", group = "Miscellaneous Tasks" },
     { body = ".*security", group = "Security" },
+    { footer = "^changelog: ?ignore", skip = true },
 ]
 # Exclude commits that are not matched by any commit parser.
 filter_commits = false
