--- a/.github/workflows/build.dispatch.yaml
+++ b/.github/workflows/build.dispatch.yaml
@@ -1,11 +1,6 @@
 ---
 name: Build
 
-permissions:
-  contents: write
-  id-token: write
-  attestations: write
-
 defaults:
   run:
     shell: bash
@@ -30,24 +25,30 @@ on:
       artifact-name:
         description: Name of the uploaded build artifact
         value: ${{ jobs.build.outputs.artifact-name }}
-      attestation-file-name:
-        description: Name of the bundled attestation file
-        value: ${{ jobs.build.outputs.attestation-file-name }}
-      tarball-file-name:
-        description: Name of the bundled tarball file
-        value: ${{ jobs.build.outputs.tarball-file-name }}
-      notes-file-name:
-        description: Name of the bundled release notes file
-        value: ${{ jobs.build.outputs.notes-file-name }}
+      package-file:
+        description: Base name of the bundled package file (.tar.gz)
+        value: ${{ jobs.build.outputs.package-file }}
+      attestation-file:
+        description: Base name of the bundled attestation file (.sigstore.json)
+        value: ${{ jobs.build.outputs.attestation-file }}
+      notes-file:
+        description: Base name of the bundled release notes file (.md)
+        value: ${{ jobs.build.outputs.notes-file }}
 
 jobs:
   build:
     runs-on: ${{ inputs.runs-on }}
+
+    permissions:
+      contents: write
+      id-token: write
+      attestations: write
+
     outputs:
       artifact-name: ${{ inputs.artifact-name }}
-      tarball-file-name: ${{ steps.archive.outputs.out-file-basename }}
-      attestation-file-name: ${{ steps.artifact.outputs.attestation-file-name }}
-      notes-file-name: ${{ steps.artifact.outputs.notes-file-name }}
+      package-file: ${{ steps.artifact.outputs.package-file }}
+      attestation-file: ${{ steps.artifact.outputs.attestation-file }}
+      notes-file: ${{ steps.artifact.outputs.notes-file }}
 
     steps:
       - name: Checkout
@@ -70,32 +71,30 @@ jobs:
           EOF
           cat version.json
 
-      - name: Create tarball
-        id: archive
+      - name: Create package
+        id: package
         env:
           VERSION: ${{ github.ref_name }}
           OUT_DIR: dist
         run: |
           mkdir -p "${OUT_DIR}"
-          OUT_FILE_BASENAME="mcbox-${VERSION}.tar.gz"
-          OUT_FILE="${OUT_DIR}/${OUT_FILE_BASENAME}"
+          OUT_FILE="mcbox-${VERSION}.tar.gz"
           tar \
               --create \
               --gzip \
-              --file "${OUT_FILE}" \
+              --file "${OUT_DIR}/${OUT_FILE}" \
                       mcbox-core.bash \
                       mcbox-server.bash \
                       version.json \
                       defaults/
           echo "out-dir=${OUT_DIR}" >> "${GITHUB_OUTPUT}"
           echo "out-file=${OUT_FILE}" >> "${GITHUB_OUTPUT}"
-          echo "out-file-basename=${OUT_FILE_BASENAME}" >> "${GITHUB_OUTPUT}"
 
-      - name: Generate artifact attestation
+      - name: Generate package attestation
         uses: actions/attest-build-provenance@977bb373ede98d70efdf65b84cb5f73e068dcc2a # v3.0.0
         id: attestation
         with:
-          subject-path: ${{ steps.archive.outputs.out-file }}
+          subject-path: "${{ steps.package.outputs.out-dir }}/${{ steps.package.outputs.out-file }}"
 
       - name: Generate release notes
         uses: orhun/git-cliff-action@d77b37db2e3f7398432d34b72a12aa3e2ba87e51 # v4.6.0
@@ -104,24 +103,27 @@ jobs:
           config: cliff.toml
           args: --latest --strip header
         env:
-          OUTPUT: "${{ steps.archive.outputs.out-dir }}/CHANGES.md"
+          OUTPUT: "${{ steps.package.outputs.out-dir }}/CHANGES.md"
 
-      - name: Create artifact
+      - name: Prepare artifact contents
         id: artifact
         env:
-          OUT_DIR: ${{ steps.archive.outputs.out-dir }}
-          ATTESTATION_FILE: ${{ steps.attestation.outputs.bundle-path }}
-          NOTES_FILE: ${{ steps.git-cliff.outputs.changelog }}
+          OUT_DIR: ${{ steps.package.outputs.out-dir }}
+          OUT_FILE: ${{ steps.package.outputs.out-file }}
+          ATTESTATION_ORIGIN_FILE: ${{ steps.attestation.outputs.bundle-path }}
+          NOTES_ORIGIN_FILE: ${{ steps.git-cliff.outputs.changelog }}
         run: |
-          cp "${ATTESTATION_FILE}" "${OUT_DIR}"
-          echo "attestation-file-name=$(basename "${ATTESTATION_FILE}")" >> "${GITHUB_OUTPUT}"
-          echo "notes-file-name=$(basename "${NOTES_FILE}")" >> "${GITHUB_OUTPUT}"
+          ATTESTATION_FILE="${OUT_FILE}.sigstore.json"
+          cp "${ATTESTATION_ORIGIN_FILE}" "${OUT_DIR}/${ATTESTATION_FILE}"
+          echo "package-file=${OUT_FILE}" >> "${GITHUB_OUTPUT}"
+          echo "attestation-file=${ATTESTATION_FILE}" >> "${GITHUB_OUTPUT}"
+          echo "notes-file=$(basename "${NOTES_ORIGIN_FILE}")" >> "${GITHUB_OUTPUT}"
 
       - name: Upload artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
           name: ${{ inputs.artifact-name }}
-          path: ${{ steps.archive.outputs.out-dir }}
+          path: ${{ steps.package.outputs.out-dir }}
           retention-days: ${{ inputs.artifact-retention-days }}
           if-no-files-found: error
           overwrite: true
